@@ -6,11 +6,18 @@ copyright_year   = 2013
 version          = 0.16
 
 [@Author::Plicease]
+:version      = 2.21
 readme_from   = bin/cpangitify
 release_tests = 1
 travis_status = 1
-installer     = ModuleBuild
-mb_class      = My::ModuleBuild
+
+preamble = | use Git::Wrapper;
+preamble = | use Sort::Versions qw( versioncmp );
+preamble = | if ( versioncmp( Git::Wrapper->new('.')->version, '1.5.0' ) == -1 )
+preamble = | {
+preamble = |   print "git version 1.5.0 or better is required\n";
+preamble = |   exit;
+preamble = | }
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   require Git::Wrapper;
