@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Update for API interface change (?) allow author email
+    address as either a scalar or array reference.
+  - Switch back to MakeMaker for installer
 
 0.16      2017-07-23 06:54:53 -0400
   - Remove broken link to no longer existing module
